# ColdPy

./: .gitignore  PRODUCT.md  README.md  pyproject.toml
.coldpy/: cache.json
.github/workflows/: ci.yml  package.yml  publish.yml
coldpy/: __init__.py  __main__.py  cache.py  cli.py  discovery.py  models.py  reporter.py  runtime.py  scanner.py
tests/: test_cache.py  test_cli.py  test_discovery.py  test_runtime.py  test_scanner.py
tests/fixtures/sample_project/: .env
tests/fixtures/sample_project/alembic/: env.py
tests/fixtures/sample_project/alembic/versions/: 0001_init.py
tests/fixtures/sample_project/migrations/: 0002_more.py
tests/fixtures/sample_project/pkg/: broken.py  env_required.py  slowish.py
tests/fixtures/sample_project/tests/: test_should_ignore.py
